@@ -1,3 +1,5 @@
+########  2012-12-12  #########
+alter table shop_monitor_systemconfig drop is_confirm_delivery_auto;
 ########  2012-12-06  #########
 alter table shop_trades_mergetrade drop year;
 alter table shop_trades_mergetrade drop month;
